--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ sp_core = { package = "sp-core", version = "34.0.0", default-features = false, f
 itertools = { version = "0.13.0" }
 permutations = { version = "0.1.1" }
 indicatif = "0.17.8"
+rayon = "1.10.0"
+rayon-progress = "1.0.0"
+linya = "0.3.1"
